--- a/index.html
+++ b/index.html
@@ -87,7 +87,10 @@
       </section>
    </main>
    <footer>
-
+      <a href="./index.html">web<span>studio</span></a>
+      <p>Increase the flow of customers and</br>
+         sales for your business with digital</br>
+          marketing & growth solutions.</p>
    </footer> 
 </body>
 </html>
