--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="e">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,7 +20,7 @@
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
         <li>
-            <a href="tel:+11 (000) 111-11-11">+11 (000) 111-11-11</a>
+            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
         </li>
      </ul>
    </header>
@@ -88,8 +88,8 @@
    </main>
    <footer>
       <a href="./index.html">web<span>studio</span></a>
-      <p>Increase the flow of customers and</br>
-         sales for your business with digital</br>
+      <p>Increase the flow of customers and
+         sales for your business with digital
           marketing & growth solutions.</p>
    </footer> 
 </body>
