--- a/index.html
+++ b/index.html
@@ -55,31 +55,31 @@
       <section>
       <h2>What are we doing</h2>
         <ul>
-            <li><img src="./images/img1.jpg" alt="monitor"></li>
-            <li><img src="./images/img2.jpg" alt="telephone"></li>
-            <li><img src="./images/img3.jpg" alt="laptop and phone"></li>
+            <li><img src="./images/img1.jpg" alt="monitor" width="360"></li>
+            <li><img src="./images/img2.jpg" alt="telephone" width="360"></li>
+            <li><img src="./images/img3.jpg" alt="laptop and phone" width="360"></li>
         </ul>
       </section>
       <section>
         <h2>Our Team</h2>
         <ul>
             <li>
-                <img src="./images/img4.jpg" alt="Man Product Designer">
+                <img src="./images/img4.jpg" alt="Man Product Designer" width="265">
                 <h3>Mark Guerrero</h3>
                 <p>Product Designer</p>
             </li>
             <li>
-                <img src="./images/img5.jpg" alt="Man Frontend Develope">
+                <img src="./images/img5.jpg" alt="Man Frontend Develope" width="265">
                 <h3>Tom Ford</h3>
                 <p>Frontend Developer</p>
             </li>
             <li>
-                <img src="./images/img6.jpg" alt="Woman Marketing">
+                <img src="./images/img6.jpg" alt="Woman Marketing" width="265">
                 <h3>Camila Garcia</h3>
                 <p>Marketing</p>
             </li>
             <li>
-                <img src="./images/img7.jpg" alt="ManUI Designe">
+                <img src="./images/img7.jpg" alt="ManUI Designe" width="265">
                 <h3>Daniel Wilson</h3>
                 <p>UI Designer</p>
             </li>
